--- a/assets/sass/layout/_section.scss
+++ b/assets/sass/layout/_section.scss
@@ -71,16 +71,15 @@ section {
                     padding: 1em;
                     transition: all 0.7s cubic-bezier(0.9, 0, 0.33, 1);
                     transform: rotateZ(0);
-                    top: 5px;
-                    left: 5px;
                 }
             }
             .audio-controls {
-                z-index: 3;
+                z-index: 0;
                 transform-origin: left top;
                 background-color: white;
                 color: black;
                 border-radius: 5px;
+                box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.4);
                 position: relative;
                 top: -24px;
                 left: 16px;
